# Trading-Bot-Project

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  RBI_CHECKLIST.md  README.md  README_EXAMPLES.md  ROADMAP.md  alembic.ini  contexto.txl  contexto.txt  create_structure.ps1  docker-compose.yml  lee.txt  pyproject.toml  pytest.ini  repo  requirements-dev.txt  requirements.txt
alembic/: env.py
docker/: Dockerfile.python  init-db.sql
docs/: phase1_summary.md
monitoring/prometheus/: alerts.yml  prometheus.yml
notebooks/research/: strategy_research_template.ipynb
scripts/: docker.ps1  docker.sh  health_check.sh  logs.sh  start.sh  stop.sh
src/python/: __init__.py
src/python/application/ports/: __init__.py
src/python/application/ports/repositories/: __init__.py  i_order_repository.py  i_position_repository.py
src/python/backtesting/: backtest_engine.py  performance_metrics.py  portfolio_manager.py  simulated_exchange.py
src/python/domain/: __init__.py
src/python/domain/entities/: __init__.py  candle.py  order.py  portfolio.py  position.py  signal.py  trade.py
src/python/domain/enums/: __init__.py  exchange_type.py  order_side.py  order_status.py  order_type.py
src/python/domain/exceptions/: __init__.py  domain_exceptions.py
src/python/domain/value_objects/: __init__.py  money.py  price.py  quantity.py  symbol.py  timeframe.py
src/python/infrastructure/config/: __init__.py  settings.py
src/python/infrastructure/database/: __init__.py  connection.py  redis_client.py  timescale_client.py  unit_of_work.py
src/python/infrastructure/database/mappers/: __init__.py  order_mapper.py  position_mapper.py
src/python/infrastructure/database/orm_models/: __init__.py  balance_model.py  candle_model.py  order_model.py  position_model.py  trade_model.py
src/python/infrastructure/database/repositories/: __init__.py  candle_repository_impl.py  order_repository.py  position_repository.py
src/python/infrastructure/exchanges/: base_exchange.py  binance_adapter.py  ccxt_wrapper.py  exceptions.py  rate_limiter.py
src/python/infrastructure/message_bus/: event_bus.py  publisher.py  subscriber.py
src/python/market_data/: __init__.py  download_historical_data.py  feed_manager.py  normalizer.py  stream_publisher.py
src/python/market_data/feeds/: __init__.py  base_feed.py  binance_feed.py
src/python/market_data/processors/: normalizer.py  validator.py
src/python/strategies/: base_strategy.py
src/python/strategies/examples/: sma_strategy.py
tests/unit/backtesting/: __init__.py  test_portfolio_manager.py  test_simulated_exchange.py
tests/unit/domain/: test_order.py  test_trade.py
