[tool.poetry]
name = "trading-system"
version = "0.2.0"
description = "Institutional-grade algorithmic trading system with hybrid Python/C++ architecture"
authors = ["Miguel Paez <miguel.paez@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
websockets = "^12.0"
python-multipart = "^0.0.6"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"

# Cache & Messaging
redis = {extras = ["hiredis"], version = "^5.0.1"}
aioredis = "^2.0.1"

# Data Processing
pandas = "^2.1.3"
numpy = "^1.26.2"
scipy = "^1.11.4"

# Exchange Connectivity
ccxt = "^4.1.65"
python-binance = "^1.0.19"

# Technical Analysis
ta-lib = {version = "^0.4.28", optional = true}
pandas-ta = "^0.3.14b"

# Utilities
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
msgpack = "^1.0.7"

# Monitoring & Logging
prometheus-client = "^0.19.0"
structlog = "^23.2.0"
python-json-logger = "^2.0.7"

# HTTP Client
httpx = "^0.25.2"
aiohttp = "^3.9.1"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.2.0"
hypothesis = "^6.92.1"

# Code Quality
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
pre-commit = "^3.5.0"

# Type Stubs
types-redis = "^4.6.0.11"
types-pyyaml = "^6.0.12.12"
types-python-dateutil = "^2.8.19.14"

# Development Tools
ipython = "^8.18.1"
ipdb = "^0.13.13"
watchdog = "^3.0.0"

# Documentation
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.2"

[tool.poetry.group.test.dependencies]
faker = "^20.1.0"
factory-boy = "^3.3.0"
freezegun = "^1.4.0"

[tool.poetry.extras]
ta-lib = ["ta-lib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black Configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff Configuration
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["src"]

# MyPy Configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "binance.*",
    "talib.*",
    "pandas_ta.*",
]
ignore_missing_imports = true

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

# Coverage Configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
